--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,11 +92,11 @@ extra:
 
 # Plugins  ...............................................
 plugins:
-  - tags
-  - search
   - blog:
       blog_toc: true
       archive: false
+  - tags
+  - search
 
 # Extensions  ...............................................
 markdown_extensions:
@@ -125,3 +125,6 @@ markdown_extensions:
 
 # Navigation  ...............................................
 nav:
+  - Home: index.md
+  - Changelog: 
+    - blog/index.md
